--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/ExampleEdit.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/ExampleEdit.html
@@ -22,7 +22,7 @@
                     <tr>
                         <th>电话号码：</th>
                         <td>
-                            <input type="text" name="mobileText" class="form-control phone required" placeholder="电话号码" >
+                            <input type="text" name="mobileText" class="form-control" placeholder="电话号码" >
                         </td>
                         <th>日期时间：</th>
                         <td>
