--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/flowdesign.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/flowdesign.html
@@ -223,18 +223,18 @@
         每个流程必须有且仅有一个起始步骤和结束步骤；起始、结束步骤不会显示在单据当前流程状态，不需要配置审核人。<br />
         除了起始、结束步骤，每个步骤都必须至少有一条流程输入箭头线和流程流出箭头线。
     </div>
+    <script src="../../lib/jquery/dist/jquery.min.js"></script>
+    <script src="../../lib/jquery-ui/jquery-ui.min.js"></script>
+    <script src="../../lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../../js/framework/BitAdmin.js"></script>
 
-
-    <script src="../../js/workflow/jquery-1.7.2.min.js"></script>
-    <script src="../../js/workflow/workflow.js"></script>
-    <script src="../../js/workflow/bootstrap.js"></script>
-    <script src="../../js/workflow/jquery-ui-1.9.2-min.js"></script>
     <script src="../../js/workflow/jquery.jsPlumb-1.3.16-all-min.js"></script>
     <script src="../../js/workflow/jquery.contextmenu.r2.js"></script>
     <script src="../../js/workflow/leipi.flowdesign.v3.js"></script>
 
+
     <script type="text/javascript">
-        var flowId = workflow.GetQueryString("fm");
+        var flowId = BitPage.GetQueryString("fm");
 
         //审核类型下拉框事件
         function AuditNormChange() {
@@ -311,7 +311,6 @@
 
             //线条修改框
             lineCondition = function (c) {
-                debugger;
                 conditionNum = null;
                 lineC = c;
                 $("#leipi_process_info input[type=hidden]").each(function (i) {
@@ -331,7 +330,6 @@
             }
             //保存修改的线条 condition值
             saveCondition = function () {
-                debugger;
                 if (conditionNum != null) {
                     var data = $(conditionNum).data("data");
                     data.nikename = $("#input_condition_d").val();
@@ -341,7 +339,6 @@
             }
             //删除线条
             delLine = function () {
-                debugger;
                 if (lineC != null) {
                     jsPlumb.detach(lineC);
                     lineC = null;
@@ -356,7 +353,7 @@
                 var step = stepDiv.data("data");
 
                 $("#step_Id").val(step.stepId);
-                
+
                 $("#step_StepName").val(step.stepName);
                 $("input[name='step_StepStatus'][value='" + step.stepStatus + "']").attr('checked', 'true');
 
@@ -430,7 +427,7 @@
                                 alert(result.msg);
                             });
                         },
-                        "cmRefresh": function (t) {location.reload();}
+                        "cmRefresh": function (t) { location.reload(); }
                     },
                     processMenus: {
                         "pmDelete": function (t) {
