--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/develop/prototypingexample.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/develop/prototypingexample.html
@@ -1,4 +1,5 @@
-﻿<div class="box">
+﻿<!--BitAdmin2.0框架文件-->
+<div class="box">
     <div id="querySuiteOne" class="box-body querySuite-wrapper">
         <!-- 条件搜索 -->
         <div class="querySuite-filter">
