--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
@@ -1,4 +1,4 @@
-﻿
+﻿<!--BitAdmin2.0框架文件-->
 <style>
     p {
         font-family: 'Microsoft YaHei UI';
@@ -50,6 +50,7 @@
         <p>微信支付(<a href="pay.html">示例</a>)、支付宝支付(<a href="pay.html">示例</a>)</p>
         <p>个推平台(<a href="notice.html">示例</a>)</p>
         <p>Swagger(<a href="/swagger" target="_blank">查看</a>)</p>
+        <p>定时服务(<a href="notice.html">服务列表</a>)</p>
 
         <h2><span style="font-weight:bold;">BitAdminCore框架（微信）</span></h2>
         <h4><span style="font-weight:bold;">登录页面：</span></h4>
