--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/flowdesign.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/flowdesign.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿<!--BitAdmin2.0框架文件-->
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN">
 <head>
     <title>流程设计器</title>
