--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workbench/todo.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workbench/todo.html
@@ -1,4 +1,4 @@
-﻿
+﻿<!--BitAdmin2.0框架文件-->
 <div class="box">
     <div id="exampleQuery" class="box-body querySuite-wrapper">
         <!-- 条件搜索 -->
@@ -35,8 +35,8 @@
             </button>
         </div>
         <!-- 列表-->
-        <div class="querySuite-table" 
-             data-order-by="BRU.endTime" 
+        <div class="querySuite-table"
+             data-order-by="BRU.endTime"
              data-order-type="DESC"
              data-key="taskUserId"
              data-query-url="../../Workflow/GetWorkbenchList">
