--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/login.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/login.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿<!--BitAdmin2.0框架文件-->
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>用户登录</title>
