--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/develop/menu.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/develop/menu.html
@@ -1,4 +1,4 @@
-﻿
+﻿<!--BitAdmin2.0框架文件-->
 <link href="../../lib/jquery-treegrid/css/jquery.treegrid.css" rel="stylesheet" />
 <div class="box">
     <div class="box-body querySuite-wrapper">
@@ -245,7 +245,7 @@
                         return false;
                     }
                     $.each(result.data, function (i, d) {
-                        var checked = (d.pageId != null && d.pageId != "") ? "checked":"";
+                        var checked = (d.pageId != null && d.pageId != "") ? "checked" : "";
                         $("#td_Operation").append('<p style="float: left;padding:2px 10px;"><input type="checkbox" name="Operation" value="' + d.operationSign + '" ' + checked + '/>' + d.operationName + '</p>');
                     });
                     $("#ckOperationAll").attr("value", id);
