--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/picker/userpicker.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/picker/userpicker.html
@@ -1,4 +1,4 @@
-﻿
+﻿<!--BitAdmin2.0框架文件-->
 <link href="../../lib/bootstrap-treeview/bootstrap-treeview.min.css" rel="stylesheet" />
 <style type="text/css">
     .modal .panel-body {
