--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/roleOperate.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/roleOperate.html
@@ -1,4 +1,4 @@
-﻿
+﻿<!--BitAdmin2.0框架文件-->
 <link href="../../lib/jquery-treegrid/css/jquery.treegrid.css" rel="stylesheet" />
 <div class="box">
     <div class="box-body querySuite-wrapper">
