--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workbench/read.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workbench/read.html
@@ -1,4 +1,4 @@
-﻿
+﻿<!--BitAdmin2.0框架文件-->
 <div class="box">
     <div id="exampleQuery" class="box-body querySuite-wrapper">
         <!-- 条件搜索 -->
@@ -62,22 +62,22 @@
     $(function () {
         //查询套件初始化
         var querySuite = $("#exampleQuery").querySuite()
-        .columns["workOrderName"].format(function (val, data) {
-            var span = $('<span class="btn btn-link">' + (val || '') + '</span>');
-            span.bind('click', function () {
-                switch (data.mainCode) {
-                    case "999":
-                        BitPage.Redirect("/WorkflowExample/ExampleTab", { orderId: data.billsCode, state: $('.querySuite-filter [name=state]').val(), taskUserId: data.taskUserId }, "WorkflowExample");
-                        break;
-                    case '':
-                        break;
-                }
-            });
-            return span;
-        })
-        .columns["userName"].format(function (val, data) {
-            return data.userName + "(" + data.userCode + ")";
-        })
-        .query();
+            .columns["workOrderName"].format(function (val, data) {
+                var span = $('<span class="btn btn-link">' + (val || '') + '</span>');
+                span.bind('click', function () {
+                    switch (data.mainCode) {
+                        case "999":
+                            BitPage.Redirect("/WorkflowExample/ExampleTab", { orderId: data.billsCode, state: $('.querySuite-filter [name=state]').val(), taskUserId: data.taskUserId }, "WorkflowExample");
+                            break;
+                        case '':
+                            break;
+                    }
+                });
+                return span;
+            })
+            .columns["userName"].format(function (val, data) {
+                return data.userName + "(" + data.userCode + ")";
+            })
+            .query();
     });
 </script>
