--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflow/flowhistory.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflow/flowhistory.html
@@ -1,4 +1,4 @@
-﻿
+﻿<!--BitAdmin2.0框架文件-->
 <div id="flowHistoryBlock" class="box-body querySuite-wrapper" style="display: none;">
     <!-- 条件搜索 -->
     <div class="querySuite-filter">
@@ -43,42 +43,42 @@
         $('#flowHistoryBlock [name=taskUserId]').val(_options.taskUserId);
         //查询套件初始化
         var querySuite = $("#flowHistoryBlock")
-        .querySuite()
-        .columns["userName"].format(function (val, data) {
-            if (!data.userName)
-                return '';
-            return (data.userName) || '' + "(" + (data.userCode || '') + ")";
-        })
-        .columns["choice"].format(function (val, data) {
-            var result = '';
-            switch (data.choice) {
-                case '1':
-                    result = '同意';
-                    break;
-                case '10':
-                    result = '回退';
-                    break;
-                case '50':
-                    result = '转交';
-                    break;
-            }
-            switch (data.State) {
-                case 'Auto':
-                    result = '自动运行';
-                    break;
-                case 'void':
-                    result = '作废';
-                    break;
-                case 'ToRead':
-                    result = '待阅';
-                    break;
-                case 'ReadEnd':
-                    result = '已阅';
-                    break;
-            }
-            return result;
-        })
-        .query();
+            .querySuite()
+            .columns["userName"].format(function (val, data) {
+                if (!data.userName)
+                    return '';
+                return (data.userName) || '' + "(" + (data.userCode || '') + ")";
+            })
+            .columns["choice"].format(function (val, data) {
+                var result = '';
+                switch (data.choice) {
+                    case '1':
+                        result = '同意';
+                        break;
+                    case '10':
+                        result = '回退';
+                        break;
+                    case '50':
+                        result = '转交';
+                        break;
+                }
+                switch (data.State) {
+                    case 'Auto':
+                        result = '自动运行';
+                        break;
+                    case 'void':
+                        result = '作废';
+                        break;
+                    case 'ToRead':
+                        result = '待阅';
+                        break;
+                    case 'ReadEnd':
+                        result = '已阅';
+                        break;
+                }
+                return result;
+            })
+            .query();
     });
 </script>
 
