--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/ExampleTab.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/ExampleTab.html
@@ -1,4 +1,5 @@
-﻿<div class="box" id="tabSource">
+﻿<!--BitAdmin2.0框架文件-->
+<div class="box" id="tabSource">
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
         <li role="presentation"><a href="#step0" role="tab" data-toggle="tab"></a></li>
