--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/ExampleTwo.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/ExampleTwo.html
@@ -1,4 +1,4 @@
-﻿
+﻿<!--BitAdmin2.0框架文件-->
 <div id="exampleModal" class="formSuite-wrapper"
      data-submit-close="false">
     <div class="modal-content">
