--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
@@ -36,21 +36,21 @@
         <h2><span style="font-weight:bold;">BitAdminCore框架（网站）</span></h2>
         <h4><span style="font-weight:bold;">登录页面：</span></h4>
         <p>提供基础的用户名、密码、验证码、短信登录。支持负载均衡环境。</p>
-        <p>提供三方平台登录：微信？、QQ、微博？</p>
+        <p>提供三方平台登录：微信、QQ、微博</p>
         <h4><span style="font-weight:bold;">应用首页：</span></h4>
         <p>基础布局：头部、菜单、内容，默认tab加载模式，支持iframe。</p>
-        <p>全局配置、通用操作、权限、日志等</p>
-        <p>通知推送、点对点聊天？</p>
+        <p>全局配置、通用操作、权限、日志、通知推送等</p>
         <h4><span style="font-weight:bold;">基础功能：</span></h4>
         <p>系统管理：部门信息、用户信息、角色权限、日志查看。</p>
-        <p>开发功能：系统菜单、页面操作、数据字典。</p>
+        <p>开发功能：系统菜单、页面操作、数据字典、代码生成、原型示例。</p>
         <p>流程引擎：流程配置、工作台。</p>
-        <h4><span style="font-weight:bold;">技术整合：</span></h4>
-        <p>QRCode、语音识别？百度地图？EChart图表？</p>
-        <p>微信支付(<a href="pay.html">示例</a>)、支付宝支付(<a href="pay.html">示例</a>)</p>
-        <p>个推平台(<a href="notice.html">示例</a>)</p>
+        <h4><span style="font-weight:bold;">技术集成：</span></h4>
+        <p>二维码生成</p>
         <p>Swagger(<a href="/swagger" target="_blank">查看</a>)</p>
         <p>定时服务(<a href="notice.html">服务列表</a>)</p>
+        <h4><span style="font-weight:bold;">服务集成：</span></h4>
+        <p>微信支付(<a href="pay.html">示例</a>)</p>
+        <p>个推平台(<a href="notice.html">示例</a>)</p>
 
         <h2><span style="font-weight:bold;">BitAdminCore框架（微信）</span></h2>
         <h4><span style="font-weight:bold;">登录页面：</span></h4>
